refactor layout and styling

--- a/src/components/ui/Window/Window.module.css
+++ b/src/components/ui/Window/Window.module.css
@@ -8,6 +8,8 @@
 .background {
   border-radius: 1rem;
   background-color: var(--clr-surface-a10);
+  border: 1px solid var(--clr-surface-a20);
+  /*box-shadow: inset 0 0 4px var(--clr-surface-a20);*/
   padding: .5rem;
 
   display: flex;
@@ -25,9 +27,20 @@
 }
 
 .foreground {
+  position: relative;
   border-radius: .5rem;
-
+  border: 1px solid var(--clr-surface-a20);
+  /*box-shadow: 0 0 4px var(--clr-surface-a20);*/
   flex: 1 1 auto;
   min-height: 0;
-  overflow: auto;
+  overflow: hidden;
+}
+
+.foreground::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  pointer-events: none;
+  z-index: 1;
 }
