--- a/src/components/Layout/Navbar/Navbar.module.css
+++ b/src/components/Layout/Navbar/Navbar.module.css
@@ -2,6 +2,8 @@
   left: 0;
   top: 0;
   width: 100%;
+  position: sticky;
+  z-index: 1000;
 
   padding: .5rem 1rem;
   background-color: var(--clr-surface-a10);
