--- a/src/components/Console/Console.module.css
+++ b/src/components/Console/Console.module.css
@@ -1,4 +1,6 @@
 .console {
+  font-family: "JetBrains Mono", monospace;
+  font-size: 14px;
   background-color: var(--clr-surface-a0);
   padding: 1rem;
   height: 100%;
