--- a/src/components/Editor/Editor.module.css
+++ b/src/components/Editor/Editor.module.css
@@ -25,8 +25,19 @@
 .viewport,
 .console,
 .codeEditor {
-  flex: 1;
   display: flex;
   min-height: 0;
+}
+
+.codeEditor {
+  flex: 1;
+}
+
+.viewport {
+  flex: 0 0 60%;
+}
+
+.console {
+  flex: 1 1 40%;
 }
 
