--- a/src/components/CodeEditor/CodeEditor.module.css
+++ b/src/components/CodeEditor/CodeEditor.module.css
@@ -15,7 +15,6 @@
   padding: 10px 8px;
   user-select: none;
   -webkit-user-select: none;
-  opacity: 1;
   background-color: color-mix(in srgb, var(--background-color), var(--clr-dark-a0) 10%);
 }
 
@@ -23,4 +22,9 @@
   height: 1.5em;
   line-height: 1.5em;
   opacity: 0.3;
+}
+
+.currentLineIndicator {
+  color: var(--clr-danger-a10);
+  opacity: 1;
 }
