fix cursor in code editor

--- a/src/components/CodeEditor/CodeEditor.module.css
+++ b/src/components/CodeEditor/CodeEditor.module.css
@@ -8,6 +8,7 @@
   --background-color: var(--clr-surface-a10);
   color: var(--foreground-color);
   background-color: var(--background-color);
+  cursor: text;
 }
 
 .lineNumbers {
