--- a/src/components/Viewport/Viewport.module.css
+++ b/src/components/Viewport/Viewport.module.css
@@ -3,4 +3,34 @@
   padding: 1rem;
   height: 100%;
   width: 100%;
+  overflow: hidden;
+  cursor: grab;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.viewport:active {
+  cursor: grabbing;
+}
+
+.mazeContainer {
+  display: grid;
+  grid-template-columns: repeat(10, 40px);
+  grid-template-rows: repeat(6, 40px);
+  gap: 2px;
+}
+
+.cell {
+  width: 40px;
+  height: 40px;
+  background-color: #eee;
+}
+
+.wall {
+  background-color: #333;
+}
+
+.owl {
+  background-image: url('/src/assets/owl.png');
+  background-size: cover;
 }
