--- a/src/components/Console/Console.module.css
+++ b/src/components/Console/Console.module.css
@@ -1,9 +1,10 @@
 .console {
   font-family: "JetBrains Mono", monospace;
   font-size: 14px;
-  background-color: var(--clr-surface-a0);
+  background-color: black;
   padding: 1rem;
   height: 100%;
   width: 100%;
   white-space: pre-wrap;
+  overflow: auto;
 }
