--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,11 +1,18 @@
 main {
   padding: 1rem;
   height: 100%;
+  width: 100%;
+  max-width: 1200px;
+}
+
+main.fullWidth {
+  max-width: none;
 }
 
 .layout {
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 100%;
   min-height: 0;
 }
