--- a/src/components/Layout/Navbar/Navbar.module.css
+++ b/src/components/Layout/Navbar/Navbar.module.css
@@ -8,6 +8,7 @@
   padding: .5rem 1rem;
   background-color: var(--clr-surface-a10);
   border-bottom: 1px solid var(--clr-surface-a20);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.9);
 
   display: flex;
   align-items: center;
