--- a/src/components/Viewport/Viewport.module.css
+++ b/src/components/Viewport/Viewport.module.css
@@ -1,5 +1,5 @@
 .viewport {
-  background-color: var(--clr-surface-a0);
+  background-color: black;
   padding: 1rem;
   height: 100%;
   width: 100%;
