--- a/src/components/Editor/Editor.module.css
+++ b/src/components/Editor/Editor.module.css
@@ -2,7 +2,7 @@
   display: flex;
   --gap: 1rem;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - var(--navbar-height) - 2rem);
   min-height: 0;
   flex: 1;
   gap: var(--gap);
