--- a/src/components/Layout/Navbar/Navbar.module.css
+++ b/src/components/Layout/Navbar/Navbar.module.css
@@ -1,7 +1,12 @@
+:root {
+  --navbar-height: 3.5rem;
+}
+
 .navbar {
   left: 0;
   top: 0;
   width: 100%;
+  height: var(--navbar-height);
   position: sticky;
   z-index: 1000;
 
