add editor theme settings and improve console

--- a/src/components/CodeEditor/CodeEditor.module.css
+++ b/src/components/CodeEditor/CodeEditor.module.css
@@ -1,5 +1,4 @@
-.codeEditor {
-  font-family: "JetBrains Mono", monospace;
+.container {
   height: 100%;
   width: 100%;
 
@@ -11,14 +10,20 @@
   background-color: var(--background-color);
   cursor: text;
   overflow: auto;
+  position: relative;
+}
+
+.codeEditor {
+  font-family: "JetBrains Mono", monospace;
 }
 
 .lineNumbers {
+  font-family: "JetBrains Mono", monospace;
   text-align: right;
   padding: 10px 8px;
   user-select: none;
   -webkit-user-select: none;
-  background-color: color-mix(in srgb, var(--background-color), var(--clr-dark-a0) 10%);
+  background-color: color-mix(in srgb, var(--background-color), var(--clr-dark-a0) 5%);
 }
 
 .lineNumber {
@@ -29,5 +34,6 @@
 
 .currentLineIndicator {
   color: var(--clr-danger-a10);
+  margin-right: 4px;
   opacity: 1;
 }
