--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -34,6 +34,19 @@
   transform: none !important;
 }
 
+.icon-only {
+  --background-color: var(--clr-surface-a20);
+  color: var(--text-color);
+  padding: var(--padding-vertical);
+}
+
+.icon-rounded {
+  --background-color: var(--clr-surface-a20);
+  color: var(--text-color);
+  padding: var(--padding-vertical);
+  border-radius: 50%;
+}
+
 .primary {
   --background-color: var(--clr-primary-a0);
   color: var(--clr-dark-a0);
