--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -6,7 +6,7 @@
   z-index: 2000;
   box-sizing: border-box;
 
-  animation: popup-animation 0.1s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
+  animation: popup-animation 0.15s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
 
 .popup-arrow {
@@ -29,6 +29,10 @@
   1% {
     transform: scale(0.96);
     opacity: 0;
+  }
+  70% {
+    transform: scale(1.02);
+    opacity: 1;
   }
   100% {
     transform: scale(1);
