--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -34,6 +34,11 @@
   transform: none !important;
 }
 
+.disabled {
+  background: transparent;
+  box-shadow: inset 0 0 0 2px var(--clr-surface-a20);
+}
+
 .icon-only {
   --background-color: var(--clr-surface-a20);
   color: var(--text-color);
