--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,7 +1,7 @@
 input, select {
   all: unset;
-  padding: calc(var(--padding-vertical) / 2) calc(var(--padding-horizontal) / 2);
+  padding: var(--padding);
   background: var(--clr-surface-a0);
-  border: 1px solid var(--clr-surface-a20);
+  box-shadow: inset 0 0 0 1px var(--clr-surface-a20);
   border-radius: .5rem;
 }
