--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -9,6 +9,7 @@
   font-size: 16px;
   box-sizing: content-box;
   text-align: center;
+  height: 1.5rem;
 }
 
 .flex {
@@ -43,6 +44,7 @@
   --background-color: var(--clr-surface-a20);
   color: var(--text-color);
   padding: var(--padding-vertical);
+  width: 1.5rem;
 }
 
 .icon-rounded {
