--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,4 +1,9 @@
-input, select {
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"],
+input[type="search"],
+select {
   all: unset;
   padding: var(--padding);
   background: var(--clr-surface-a0);
