--- a/src/components/CodeEditor/CodeEditor.module.css
+++ b/src/components/CodeEditor/CodeEditor.module.css
@@ -11,6 +11,8 @@
   cursor: text;
   overflow: auto;
   position: relative;
+  --line-number: 1;
+  --line-number-transition-duration: 0.1s;
 }
 
 .codeEditor {
@@ -28,7 +30,6 @@
   user-select: none;
   -webkit-user-select: none;
   background-color: color-mix(in srgb, var(--background-color), var(--clr-dark-a0) 5%);
-  --line-number: 1;
 }
 
 .lineNumber {
@@ -51,7 +52,8 @@
   width: 100%;
   background: linear-gradient(90deg, var(--clr-danger-a0) 0%, transparent 40%) center;
   z-index: 2;
-  transition: top 0.1s ease-out, opacity 0.1s ease-out;
+  transition: top var(--line-number-transition-duration) ease-out,
+  opacity var(--line-number-transition-duration) ease-out;
   opacity: 0;
   mix-blend-mode: screen;
 }
