--- a/src/components/CodeEditor/CodeEditor.module.css
+++ b/src/components/CodeEditor/CodeEditor.module.css
@@ -56,6 +56,7 @@
   opacity var(--line-number-transition-duration) ease-out;
   opacity: 0;
   mix-blend-mode: screen;
+  pointer-events: none;
 }
 
 .currentLineOverlay.visible {
