--- a/src/components/CodeEditor/CodeEditor.module.css
+++ b/src/components/CodeEditor/CodeEditor.module.css
@@ -3,7 +3,6 @@
   width: 100%;
 
   display: flex;
-  font-size: 14px;
   --foreground-color: var(--text-color);
   --background-color: var(--clr-surface-a10);
   color: var(--foreground-color);
@@ -17,10 +16,33 @@
 
 .codeEditor {
   font-family: "JetBrains Mono", monospace;
+  /*font-size: var(--editor-font-size);*/
+  /*line-height: var(--editor-line-height);*/
+  flex: 1;
+  line-height: 1.4em;
+
+  overflow: auto !important;
+  white-space: pre;
+  height: 100vh;
 }
 
 .codeEditor textarea:focus {
   outline: none; /* Remove default focus outline */
+}
+
+.codeEditor textarea {
+  white-space: pre !important;
+  word-wrap: normal !important;
+  word-break: break-all !important;
+/*  height: ${({ textareaHeight }) => textareaHeight}px!important;*/
+/*width: ${({ textareaWidth }) => textareaWidth}px!important;*/
+}
+
+.codeEditor pre {
+  height: 100vh;
+  white-space: pre !important;
+  word-wrap: normal !important;
+  word-break: break-all !important;
 }
 
 .lineNumbers {
@@ -30,11 +52,13 @@
   user-select: none;
   -webkit-user-select: none;
   background-color: color-mix(in srgb, var(--background-color), var(--clr-dark-a0) 10%);
+  overflow: hidden;
 }
 
 .lineNumber {
-  height: 1.5em;
-  line-height: 1.5em;
+  /*height: var(--editor-line-height);*/
+  /*line-height: var(--editor-line-height);*/
+  /*font-size: var(--editor-font-size);*/
   opacity: 0.3;
 }
 
@@ -46,9 +70,9 @@
 
 .currentLineOverlay {
   position: absolute;
-  top: calc(var(--line-number) * 1.5em - 0.75em);
+  top: calc((var(--line-number) - .5) * var(--editor-line-height));
   left: 0;
-  height: 1.5em;
+  height: var(--editor-line-height);
   width: 100%;
   background: linear-gradient(90deg, var(--clr-danger-a0) 0%, transparent 40%) center;
   z-index: 2;
