--- a/src/components/CodeEditor/EditorTabs/EditorTabs.module.css
+++ b/src/components/CodeEditor/EditorTabs/EditorTabs.module.css
@@ -3,11 +3,28 @@
   gap: .5rem;
 }
 
-.activeTab {
+.activeTabContainer {
   display: flex;
   align-items: center;
   background-color: var(--clr-surface-a10);
   padding-right: .4rem;
   gap: .5rem;
   border-radius: .5rem;
+}
+
+.activeTabContainer:hover {
+  cursor: default;
+}
+
+.tabButtons {
+  display: flex;
+  gap: .5rem;
+}
+
+.renamingTab {
+  padding: 0;
+}
+
+.activeTabContainer .tab{
+  box-shadow: inset 0 -2px 0 var(--clr-primary-a0);
 }
