--- a/src/components/Console/Console.module.css
+++ b/src/components/Console/Console.module.css
@@ -1,5 +1,5 @@
 .console {
-  background-color: #000000;
+  background-color: var(--clr-console-bg);
   padding: 1rem;
   height: 100%;
   width: 100%;
@@ -15,7 +15,6 @@
 
 .message {
   font-family: "JetBrains Mono", monospace;
-  font-size: 14px;
 }
 
 .message-error {
@@ -28,5 +27,5 @@
 }
 
 .message-log {
-  color: var(--clr-light-a0);
+  color: var(--text-color);
 }
