--- a/src/css/codemirror.css
+++ b/src/css/codemirror.css
@@ -13,7 +13,7 @@
       transparent 60%
   );
   opacity: 0.6;
-  mix-blend-mode: screen;
+  mix-blend-mode: overlay;
   pointer-events: none;
   animation: spawn-animation .1s;
   border-radius: 4px;
