--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -84,6 +84,10 @@
   background-color: var(--clr-surface-a20) !important;
 }
 
+.variant-outlined {
+  background-color: var(--clr-surface-a5);
+  box-shadow: inset 0 0 0 2px var(--clr-surface-a20);
+}
 
 /* Shapes */
 .shape-default {
