--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -34,7 +34,7 @@
   --clr-surface-a-minus-20: #faffff;
   --clr-surface-a-minus-10: #f3f9ff;
   --clr-surface-a0: #edf2fd;
-  --clr-surface-a5: #e8ecf9;
+  --clr-surface-a5: #E0E5EE;
   --clr-surface-a10: #e0e5ee;
   --clr-surface-a20: #d4d8e0;
   --clr-surface-a30: #c7cbd2;
@@ -101,7 +101,7 @@
   /** Theme tonal surface colors */
   --clr-surface-a-minus-20: #0e1725;
   --clr-surface-a-minus-10: #161f2d;
-  --clr-surface-a0: #1e2736;
+  --clr-surface-a0: #1E2736;
   --clr-surface-a5: #262f3e;
   --clr-surface-a10: #343b4a;
   --clr-surface-a20: #4a515e;
