--- a/src/css/codemirror.css
+++ b/src/css/codemirror.css
@@ -87,8 +87,52 @@
 .cm-tooltip-autocomplete ul {
 }
 
+/* Completion box */
+.cm-completionInfo {
+  --keyword-color: #d73a49;
+  --type-color: #005cc5;
+}
+
+.cm-completionInfo {
+  --keyword-color: #ff7b72;
+  --type-color: #79c0ff;
+}
+
 .cm-completionInfo {
   border-radius: .5rem;
   margin: 0 .5rem;
+  top: 0 !important;
+  padding: 8px !important;
   box-shadow: var(--surface-shadow-light);
+}
+
+.cm-completionInfo .usage {
+  font-family: "JetBrains Mono", monospace;
+  background-color: var(--clr-surface-a0); /* TODO: change to variable */
+  padding: 4px 8px;
+  border-radius: 8px;
+  margin: 0 0 4px;
+  border-left: 4px solid var(--clr-primary-a0);
+  width: fit-content;
+  white-space: pre-wrap;
+}
+
+.cm-completionInfo .warning {
+  background-color: var(--clr-surface-a0);
+  padding: 4px 8px;
+  border-radius: 8px;
+  margin-bottom: 4px;
+  border-left: 4px solid var(--clr-warning-a10);
+}
+
+.cm-completionInfo .description {
+}
+
+/* Doc syntax highlighting */
+.cm-completionInfo .tok-keyword {
+  color: var(--keyword-color);
+}
+
+.cm-completionInfo .tok-typeName {
+  color: var(--type-color);
 }
