--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -64,6 +64,10 @@
   --clr-info-a20: #74a4e6;
 
   --clr-console-bg: #FFFFFF;
+
+  /* Doc colors */
+  --keyword-color: #d73a49;
+  --type-color: #005cc5;
 }
 
 /* Dark theme colors */
@@ -132,4 +136,8 @@
   --clr-info-a20: #92b2e5;
 
   --clr-console-bg: #000000;
+
+  /* Doc colors */
+  --keyword-color: #ff7b72;
+  --type-color: #79c0ff;
 }
