--- a/src/components/CodeEditor/FileList/FileList.module.css
+++ b/src/components/CodeEditor/FileList/FileList.module.css
@@ -1,11 +1,23 @@
 .container {
   display: flex;
+  flex-direction: column;
   gap: .5rem;
+  padding: 3.5rem .5rem;
+  border-radius: .5rem;
+  background-color: var(--clr-surface-a0);
+  min-width: 35%;
+  border-left: 1px solid var(--clr-surface-a30);
+  box-sizing: border-box;
+  overflow: auto;
+  /*todo: box shadow*/
+}
+
+.tabContainer {
+  display: flex;
+  align-items: center;
 }
 
 .activeTabContainer {
-  display: flex;
-  align-items: center;
   background-color: var(--clr-surface-a10);
   padding-right: .4rem;
   gap: .5rem;
@@ -21,14 +33,18 @@
   gap: .5rem;
 }
 
-.tab {
-  width: 100%;
-}
-
 .renamingTab {
   padding: 0;
 }
 
+.renameInput {
+  display: flex;
+}
+
 .activeTabContainer .tab {
   box-shadow: inset 0 -2px 0 var(--clr-primary-a0);
+}
+
+.tab {
+  width: 100%;
 }
