--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -3,7 +3,7 @@
   border-radius: .5rem;
   padding: var(--padding);
   will-change: transform;
-  transition: all .2s;
+  transition: transform .2s, background-color .2s;
   background-color: var(--background-color);
   font-weight: 500;
   font-size: 16px;
