--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -7,11 +7,17 @@
   background-color: var(--background-color);
   font-weight: 500;
   font-size: 16px;
-  box-sizing: content-box;
+  box-sizing: border-box;
   text-align: center;
-  height: 1.5rem;
   word-break: keep-all;
   text-wrap: nowrap;
+
+  min-height: 1.5rem;
+}
+
+.button:focus-visible {
+  outline: 2px solid var(--clr-primary-a20);
+  outline-offset: 2px;
 }
 
 .flex {
@@ -24,68 +30,68 @@
 
 .button:hover {
   cursor: pointer;
-  background-color: color-mix(in srgb, var(--background-color) 90%, var(--text-color));
+  background-color: var(
+      --background-hover,
+      color-mix(in srgb, var(--background-color) 80%, var(--text-color))
+  );
 }
 
 .button:active {
   transform: scale(0.95);
 }
 
-.button:disabled {
-  cursor: default !important;
-  background: inherit !important;
-  transform: none !important;
+.button:disabled,
+.button[aria-disabled="true"] {
+  cursor: default;
+  background: inherit;
+  transform: none;
+  pointer-events: none;
 }
 
 /* Variants */
+.variant-none {
+  /* No Style */
+}
+
 .variant-disabled {
-  background: transparent;
+  --background-color: transparent;
+  --background-hover: transparent;
   box-shadow: inset 0 0 0 2px var(--clr-surface-a20);
 }
 
 .variant-primary {
   --background-color: var(--clr-primary-a0);
+  --background-hover: var(--clr-primary-a10);
   color: var(--clr-dark-a0);
-}
-
-.variant-primary:hover {
-  background-color: var(--clr-primary-a10) !important;
 }
 
 .variant-secondary {
   --background-color: var(--clr-surface-a20);
+  --background-hover: var(--clr-surface-a30);
   color: var(--text-color);
-}
-
-.variant-secondary:hover {
-  background-color: var(--clr-surface-a30) !important;
 }
 
 .variant-success {
   --background-color: var(--clr-success-a10);
+  --background-hover: var(--clr-success-a20);
   color: var(--clr-dark-a0);
-}
-
-.variant-success:hover {
-  background-color: var(--clr-success-a20) !important;
 }
 
 .variant-danger {
   --background-color: var(--clr-danger-a10);
+  --background-hover: var(--clr-danger-a20);
   color: var(--clr-light-a0);
 }
 
 .variant-background {
   --background-color: var(--clr-surface-a10);
+  --background-hover: var(--clr-surface-a20);
   color: var(--text-color);
 }
 
-.variant-background:hover {
-  background-color: var(--clr-surface-a20) !important;
-}
-
 .variant-outlined {
-  background-color: var(--clr-surface-a5);
+  --background-color: var(--clr-surface-a5);
+  --background-hover: var(--clr-surface-a15);
   box-shadow: inset 0 0 0 2px var(--clr-surface-a20);
 }
 
