--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -12,7 +12,10 @@
   word-break: keep-all;
   text-wrap: nowrap;
 
-  min-height: 1.5rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
 }
 
 .button:focus-visible {
@@ -20,12 +23,11 @@
   outline-offset: 2px;
 }
 
-.flex {
+.flexContainer {
+  width: 100%;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 4px;
 }
 
 .button:hover {
@@ -97,29 +99,29 @@
 
 /* Shapes */
 .shape-default {
+  height: var(--height);
   border-radius: .5rem;
 }
 
 .shape-icon {
   padding: var(--padding-vertical);
-  width: 1.5rem !important;
-  height: 1.5rem !important;
-  flex: 0 0 auto;
+  height: var(--height);
+  width: var(--height);
 }
 
 /* Sizes */
 .size-small {
-  --padding: 2px 4px;
-  --padding-vertical: 2px;
+  --height: 24px;
   font-size: 14px;
 }
 
 .size-medium {
-  --padding: .375rem .75rem;
-  --padding-vertical: .375rem;
+  --height: 28px;
   font-size: 16px;
 }
 
 .size-large {
   /* Default */
+  --height: 36px;
+  font-size: 16px;
 }
