--- a/src/css/border.css
+++ b/src/css/border.css
@@ -1,11 +1,13 @@
 :root {
   --surface-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
   --surface-shadow-light: 0 0 8px rgba(0, 0, 0, 0.4);
+  --inset-shadow: inset 0 0 16px rgba(255, 255, 255, 0.4);
 }
 
 :root[theme="dark"] {
   --surface-shadow: 0 0 16px rgba(0, 0, 0, 0.9);
   --surface-shadow-light: 0 0 8px rgba(0, 0, 0, 0.7);
+  --inset-shadow: inset 0 0 16px rgba(0, 0, 0, 0.7);
 }
 
 .window-border {
@@ -13,3 +15,4 @@
   border: 4px solid var(--clr-surface-a10);
   box-shadow: var(--surface-shadow);
 }
+
