--- a/src/components/Viewport/Viewport.module.css
+++ b/src/components/Viewport/Viewport.module.css
@@ -13,6 +13,11 @@
   width: 100%;
   height: 100%;
   display: block;
+  cursor: grab;
+}
+
+.canvas:active {
+  cursor: grabbing;
 }
 
 .canvas img {
