--- a/src/components/ui/Form/FormGroup/FormGroup.module.css
+++ b/src/components/ui/Form/FormGroup/FormGroup.module.css
@@ -2,10 +2,20 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
 .horizontal {
   flex-direction: row;
   align-items: center;
   gap: 1rem;
+}
+
+.stretch {
+  width: 100%;
+}
+
+.stretch > * {
+  flex: 1;
+  width: 100%;
 }
