--- a/src/css/form.css
+++ b/src/css/form.css
@@ -3,6 +3,7 @@ input[type="email"],
 input[type="password"],
 input[type="number"],
 input[type="search"],
+textarea,
 select {
   all: unset;
   padding: var(--padding);
