--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -9,8 +9,17 @@
   animation: popup-animation 0.15s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
 
+.popup-overlay {
+  backdrop-filter: blur(6px);
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 .popup-arrow {
   display: none;
+}
+
+[role='dialog'].popup-content {
+  min-width: 400px;
 }
 
 [role='tooltip'].popup-content {
