--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -61,6 +61,8 @@
   /* Doc colors */
   --keyword-color: #d73a49;
   --type-color: #005cc5;
+  --optionality-color: #ce9314;
+  --label-color: #1d6c76;
 }
 
 /* Dark theme colors */
@@ -125,4 +127,6 @@
   /* Doc colors */
   --keyword-color: #ff7b72;
   --type-color: #79c0ff;
+  --optionality-color: #fac75b;
+  --label-color: #64abb2;
 }
