--- a/src/level-editor/components/LevelEditor/LevelEditor.module.css
+++ b/src/level-editor/components/LevelEditor/LevelEditor.module.css
@@ -27,6 +27,7 @@
   flex-direction: column;
 }
 
+/* TODO: Fix grid scrollbar behind tiles */
 .gridWindow::before {
   content: "";
   position: absolute;
