--- a/src/components/Viewport/Viewport.module.css
+++ b/src/components/Viewport/Viewport.module.css
@@ -6,6 +6,7 @@
   -webkit-user-select: none;
 
   background: linear-gradient(180deg, #cbe8ff, #f8faff);
+  overscroll-behavior: none;
 }
 
 .canvas {
@@ -14,6 +15,7 @@
   height: 100%;
   display: block;
   cursor: grab;
+  touch-action: none;
 }
 
 .canvas:active {
