update navbar style

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -3,6 +3,7 @@
 .light-theme {
   color-scheme: light;
   --text-color: var(--clr-dark-a0);
+  --text-color-lighter: color-mix(in srgb, var(--text-color) 80%, var(--clr-surface-a0));
 
   /** Base colors */
   --clr-dark-a0: #000000;
