add animations and rework navbar

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -11,11 +11,8 @@
   z-index: 100;
 
   padding: .5rem 1rem;
-  background: linear-gradient(
-      to right,
-      color-mix(var(--clr-primary-a0), var(--clr-surface-a5) 80%),
-      var(--clr-surface-a5) 20%
-  );
+  background-color: var(--clr-surface-a0);
+
   border-bottom: 1px solid var(--clr-surface-a10);
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.9);
 }
