--- a/src/css/border.css
+++ b/src/css/border.css
@@ -12,7 +12,7 @@
 
 .window-border {
   border-radius: 1rem;
-  border: 4px solid var(--clr-surface-a10);
-  box-shadow: var(--surface-shadow);
+  border: 2px solid var(--clr-surface-a10);
+  box-shadow: var(--surface-shadow-light);
 }
 
