--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -11,6 +11,7 @@
   text-align: center;
   word-break: keep-all;
   text-wrap: nowrap;
+  border: 1px solid var(--clr-surface-a20);
 
   display: inline-flex;
   align-items: center;
@@ -58,7 +59,8 @@
 .variant-disabled {
   --background-color: transparent;
   --background-hover: transparent;
-  box-shadow: inset 0 0 0 2px var(--clr-surface-a20);
+  border: none;
+  box-shadow: inset 0 0 0 1px var(--clr-surface-a20);
 }
 
 .variant-primary {
@@ -68,8 +70,8 @@
 }
 
 .variant-secondary {
-  --background-color: var(--clr-surface-a20);
-  --background-hover: var(--clr-surface-a30);
+  --background-color: var(--clr-surface-a10);
+  --background-hover: var(--clr-surface-a20);
   color: var(--text-color);
 }
 
@@ -94,7 +96,8 @@
 .variant-outlined {
   --background-color: var(--clr-surface-a5);
   --background-hover: var(--clr-surface-a15);
-  box-shadow: inset 0 0 0 2px var(--clr-surface-a20);
+  border: none;
+  box-shadow: inset 0 0 0 1px var(--clr-surface-a20);
 }
 
 .variant-transparent {
