--- a/src/components/popup/Modal/Modal.module.css
+++ b/src/components/popup/Modal/Modal.module.css
@@ -8,15 +8,52 @@
 
 .trigger {
   display: inline-flex;
-  align-items: center;
 }
 
 .body {
-  background: var(--clr-surface-a10);
+  background: var(--clr-surface-a5);
   border: 1px solid var(--clr-surface-a20);
   box-sizing: border-box;
   padding: 1rem;
   border-radius: 1rem;
 
-  box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+  min-width: 400px;
+  position: relative;
+  overflow: hidden;
+}
+
+.overlayWrapper {
+  position: fixed;
+  inset: 0;
+  z-index: 10000;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.overlay {
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+}
+
+.container {
+  outline: none;
+  max-width: 90vw;
+  max-height: 90vh;
+  display: flex;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
