--- a/src/components/popup/Modal/Modal.module.css
+++ b/src/components/popup/Modal/Modal.module.css
@@ -8,6 +8,14 @@
 
 .trigger {
   display: inline-flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.trigger > * {
+  width: 100%;
+  height: 100%;
 }
 
 .body {
