--- a/src/editor/components/CodeEditor/CodeEditor.module.css
+++ b/src/editor/components/CodeEditor/CodeEditor.module.css
@@ -14,13 +14,23 @@
   --line-number-transition-duration: 0.1s;
 }
 
+.editorWrapper {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  gap: 1rem;
+  position: relative;
+}
+
 .codeEditor {
   font-family: "JetBrains Mono", monospace;
   flex: 1;
   width: 100%;
+  overflow: hidden;
 }
 
-.cornerGroup {
+.cornerGroup,
+.bottomCornerGroup {
   position: relative;
   width: 100%;
   gap: .5rem;
@@ -39,3 +49,18 @@
   z-index: -1;
 }
 
+.bottomCornerGroup {
+  height: 5rem;
+}
+
+.bottomCornerGroup::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(8px);
+  mask: linear-gradient(to top, black 0%, transparent 100%);
+  pointer-events: none;
+  z-index: -1;
+}
