--- a/src/editor/components/FileEditor/FileList/FileList.module.css
+++ b/src/editor/components/FileEditor/FileList/FileList.module.css
@@ -3,13 +3,15 @@
   display: flex;
   flex-direction: column;
   background-color: var(--clr-surface-a0);
-  overflow: auto;
+  overflow: hidden;
   height: 100%;
+  position: relative;
 }
 
 .fileContainer {
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 .file {
@@ -45,13 +47,26 @@
   z-index: 1;
 }
 
-/*.indicator::after {*/
-/*  content: '';*/
-/*  position: absolute;*/
-/*  top: 0;*/
-/*  left: 0;*/
-/*  background-color: rgba(255, 255, 255, 0.05);*/
+.cornerGroup {
+  display: flex;
+  width: 100%;
+  align-items: flex-end;
+}
 
-/*  width: 1000px;*/
-/*  height: 100%;*/
-/*}*/
+.spacer {
+  height: 3.25rem;
+  flex-shrink: 0;
+}
+
+.cornerGroup::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  top: -150%;
+  width: 100%;
+  height: 250%;
+  backdrop-filter: blur(4px);
+  mask: linear-gradient(to top, black 0%, transparent 100%);
+  z-index: -1;
+  pointer-events: none;
+}
