--- a/src/editor/components/Viewport/Viewport.module.css
+++ b/src/editor/components/Viewport/Viewport.module.css
@@ -15,11 +15,14 @@
   width: 100%;
   height: 100%;
   display: block;
-  cursor: grab;
   touch-action: none;
 }
 
-.canvas:active {
+.canvas.unlocked {
+  cursor: grab;
+}
+
+.canvas.unlocked:active {
   cursor: grabbing;
 }
 
